[package]
name = "rbatis_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
rbs = { version = "0.1"}
rbatis = { version = "4.0", features = ["debug_mode"]}
rbdc-pg={version="0.1"}

log = "0.4"
fast_log = "1.5"